# text-replace-tool

./: Cargo.toml  config.toml.example  readme.md
.github/workflows/: release.yml
src/: main.rs
