[package]
name = "text-replace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
config = { version = "0.13.4", features = ["yaml", "toml"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["fs", "rt-multi-thread", "macros"]}
walkdir = "2.4.0"
