[package]
name = "text-replace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
config = { version = "0.14", features = ["yaml", "toml"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
walkdir = "2.4.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*